@@ -94,7 +94,6 @@ public class ProposalStatusProcessor {
     private final ApplicationEventPublisher publisher;
     private final StoreProperties storeProperties;
     private final EraGenesisProtocolParamsUtil eraGenesisProtocolParamsUtil;
-    //    private boolean isInConwayBootstrapPhase;
     private final ObjectMapper objectMapper;
     private final int QUERY_BATCH_SIZE = 500;
 
@@ -141,7 +140,6 @@ public class ProposalStatusProcessor {
         if (eraService.getEraForEpoch(stakeSnapshotTakenEvent.getEpoch()).getValue() < Era.Conway.getValue()) {
             return;
         }
-
         int epoch = stakeSnapshotTakenEvent.getEpoch();
         int currentEpoch = epoch + 1;
 
@@ -282,15 +280,6 @@ public class ProposalStatusProcessor {
         end = System.currentTimeMillis();
         log.debug("GetTotalActiveStakeByEpoch time: {} ms", end - start);
 
-        start = System.currentTimeMillis();
-        var enactedProposalsInPrevEpoch = proposalStateClient.getProposalsByStatusAndEpoch(GovActionStatus.RATIFIED, prevEpoch - 2);
-        end = System.currentTimeMillis();
-        log.debug("GetProposalsByStatusAndEpoch time: {} ms", end - start);
-
-//        boolean isActionRatificationDelayed = enactedProposalsInPrevEpoch == null || enactedProposalsInPrevEpoch.stream()
-//                .anyMatch(govActionProposal -> GovernanceActionUtil.isDelayingAction(govActionProposal.getGovAction().getType()));
-
-
         ConstitutionCommitteeState ccState = committeeStateService.getCurrentCommitteeState(); //TODO: handle later
 
         start = System.currentTimeMillis();
@@ -301,52 +290,52 @@ public class ProposalStatusProcessor {
         log.debug("GetActivePools time: {} ms", end - start);
 
         start = System.currentTimeMillis();
+
+        // active pools that SPOs did not vote for the gov actions
+        List<String> poolsWithNonVotingSPOs = activePools.stream()
+                .filter(poolId ->
+                        votesBySPO.stream().map(VotingProcedure::getVoterHash)
+                                .distinct().noneMatch(votedPoolId -> votedPoolId.equals(poolId)))
+                .toList();
+
         // map (reward account, List of pools)
-        var activePoolsBatches = ListUtil.partition(activePools, QUERY_BATCH_SIZE);
-        Map<String, List<String>> rewardAccountPoolMap = activePoolsBatches.parallelStream()
+        var nonVotingSPOPoolBatches = ListUtil.partition(poolsWithNonVotingSPOs, QUERY_BATCH_SIZE);
+        Map<String, List<String>> rewardAccountToNonVotingPoolsMap = nonVotingSPOPoolBatches.parallelStream()
                 .flatMap(batch -> poolStorageReader.getPoolDetails(batch, prevEpoch).stream())
                 .collect(Collectors.groupingBy(PoolDetails::getRewardAccount, Collectors.mapping(PoolDetails::getPoolId, Collectors.toList())));
         end = System.currentTimeMillis();
         log.debug("GetPoolDetails time: {} ms", end - start);
 
         start = System.currentTimeMillis();
-        // Calculate the total stake of SPOs that delegated to AlwaysAbstain DRep
-        List<String> poolsDelegatedToAlwaysAbstainDRep = new ArrayList<>();
-        var poolBatches = ListUtil.partition(new ArrayList<>(rewardAccountPoolMap.values()), QUERY_BATCH_SIZE);
-        poolBatches.parallelStream().forEach(batch -> delegationVoteDataService
-                .getDelegationVotesByDRepTypeAndAddressList(batch.stream().flatMap(List::stream).toList(), DrepType.ABSTAIN, prevEpoch)
-                .parallelStream()
-                .forEach(delegationVote ->
-                        poolsDelegatedToAlwaysAbstainDRep.addAll(rewardAccountPoolMap.get(delegationVote.getAddress()))));
+        // Calculate the total stake of SPOs that delegated to AlwaysAbstain DRep and did not vote for the gov actions
+        var nonVotingSPORewardAccountBatches = ListUtil.partition(new ArrayList<>(rewardAccountToNonVotingPoolsMap.keySet()), QUERY_BATCH_SIZE);
+        List<String> poolsDelegatedToAlwaysAbstainDRep = nonVotingSPORewardAccountBatches.parallelStream()
+                .flatMap(batch -> delegationVoteDataService
+                        .getDelegationVotesByDRepTypeAndAddressList(batch, DrepType.ABSTAIN, prevEpoch)
+                        .parallelStream()
+                        .flatMap(delegationVote -> rewardAccountToNonVotingPoolsMap.get(delegationVote.getAddress()).stream()))
+                .collect(Collectors.toList());
         end = System.currentTimeMillis();
         log.debug("GetDelegationVotesByDRepTypeAndAddressList time: {} ms", end - start);
 
         start = System.currentTimeMillis();
-        BigInteger totalStakeSPODelegatedToAbstainDRep = epochStakeStorage
-                .getAllActiveStakesByEpochAndPools(prevEpoch + 2, poolsDelegatedToAlwaysAbstainDRep)
-                .stream()
-                .map(EpochStake::getAmount)
-                .reduce(BigInteger.ZERO, BigInteger::add);
+        BigInteger totalStakeSPODelegatedToAbstainDRep = getActiveStakesByEpochAndPoolsBatch(prevEpoch + 2, poolsDelegatedToAlwaysAbstainDRep, QUERY_BATCH_SIZE);
         end = System.currentTimeMillis();
         log.debug("GetAllActiveStakesByEpochAndPools time: {} ms", end - start);
 
         start = System.currentTimeMillis();
         // Calculate the total stake of SPOs that delegated to NoConfidence DRep
-        List<String> poolsDelegatedToNoConfidenceDRep = new ArrayList<>();
-        poolBatches.parallelStream().forEach(batch -> delegationVoteDataService
-                .getDelegationVotesByDRepTypeAndAddressList(batch.stream().flatMap(List::stream).toList(), DrepType.NO_CONFIDENCE, prevEpoch)
-                .parallelStream()
-                .forEach(delegationVote ->
-                        poolsDelegatedToNoConfidenceDRep.addAll(rewardAccountPoolMap.get(delegationVote.getAddress()))));
+        List<String> poolsDelegatedToNoConfidenceDRep = nonVotingSPORewardAccountBatches.parallelStream()
+                .flatMap(batch -> delegationVoteDataService
+                        .getDelegationVotesByDRepTypeAndAddressList(batch, DrepType.NO_CONFIDENCE, prevEpoch)
+                        .parallelStream()
+                        .flatMap(delegationVote -> rewardAccountToNonVotingPoolsMap.get(delegationVote.getAddress()).stream()))
+                .collect(Collectors.toList());
         end = System.currentTimeMillis();
         log.debug("GetDelegationVotesByDRepTypeAndAddressList time: {} ms", end - start);
 
         start = System.currentTimeMillis();
-        BigInteger totalStakeSPODelegatedToNoConfidenceDRep = epochStakeStorage
-                .getAllActiveStakesByEpochAndPools(prevEpoch + 2, poolsDelegatedToNoConfidenceDRep)
-                .stream()
-                .map(EpochStake::getAmount)
-                .reduce(BigInteger.ZERO, BigInteger::add);
+        BigInteger totalStakeSPODelegatedToNoConfidenceDRep = getActiveStakesByEpochAndPoolsBatch(prevEpoch + 2, poolsDelegatedToNoConfidenceDRep, QUERY_BATCH_SIZE);
         end = System.currentTimeMillis();
         log.debug("GetAllActiveStakesByEpochAndPools time: {} ms", end - start);
 
@@ -355,9 +344,9 @@ public class ProposalStatusProcessor {
 
         start = System.currentTimeMillis();
         if (!isInConwayBootstrapPhase) {
-            totalDRepStake = dRepDistStorage.getTotalStakeForEpoch(prevEpoch)
+            totalDRepStake = dRepDistStorage.getTotalStakeExcludeInactiveDRepForEpoch(currentEpoch)
                     .orElse(BigInteger.ZERO);
-            dRepAutoAbstainStake = dRepDistStorage.getStakeByDRepTypeAndEpoch(DrepType.ABSTAIN, prevEpoch).orElse(BigInteger.ZERO);
+            dRepAutoAbstainStake = dRepDistStorage.getStakeByDRepTypeAndEpoch(DrepType.ABSTAIN, currentEpoch).orElse(BigInteger.ZERO);
         }
 
         end = System.currentTimeMillis();
@@ -415,7 +404,11 @@ public class ProposalStatusProcessor {
             List<CommitteeMemberDetails> committeeMembersDoNotVote = membersCanVote.stream()
                     .filter(committeeMember ->
                             coldKeyHotKeyMap.get(committeeMember.getColdKey()) == null ||
-                                    votesByCommittee.stream().noneMatch(
+                                    votesByCommittee.stream()
+                                            .filter(votingProcedure ->
+                                                    votingProcedure.getGovActionTxHash().equals(proposal.getTxHash())
+                                                            && votingProcedure.getGovActionIndex() == proposal.getIndex())
+                                            .noneMatch(
                                             votingProcedure ->
                                                     coldKeyHotKeyMap.get(committeeMember.getColdKey())
                                                             .equals(votingProcedure.getVoterHash())))
@@ -469,10 +462,7 @@ public class ProposalStatusProcessor {
 
             start = System.currentTimeMillis();
             if (!poolsVoteYes.isEmpty()) {
-                spoYesStake = epochStakeStorage.getAllActiveStakesByEpochAndPools(prevEpoch + 2, poolsVoteYes)
-                        .stream()
-                        .map(EpochStake::getAmount)
-                        .reduce(BigInteger.ZERO, BigInteger::add);
+                spoYesStake = getActiveStakesByEpochAndPoolsBatch(prevEpoch + 2, poolsVoteYes, QUERY_BATCH_SIZE);
             }
             end = System.currentTimeMillis();
             log.debug("GetAllActiveStakesByEpochAndPools (in loop) time: {} ms", end - start);
@@ -489,11 +479,8 @@ public class ProposalStatusProcessor {
                     .toList();
 
             start = System.currentTimeMillis();
-            if (!poolsVoteYes.isEmpty()) {
-                spoAbstainStake = epochStakeStorage.getAllActiveStakesByEpochAndPools(prevEpoch + 2, poolsVoteAbstain)
-                        .stream()
-                        .map(EpochStake::getAmount)
-                        .reduce(BigInteger.ZERO, BigInteger::add);
+            if (!poolsVoteAbstain.isEmpty()) {
+                spoAbstainStake = getActiveStakesByEpochAndPoolsBatch(prevEpoch + 2, poolsVoteAbstain, QUERY_BATCH_SIZE);
             }
             end = System.currentTimeMillis();
             log.debug("GetAllActiveStakesByEpochAndPools (in loop -- poolsVoteAbstain) time: {} ms", end - start);
@@ -524,7 +511,7 @@ public class ProposalStatusProcessor {
 
                 start = System.currentTimeMillis();
                 if (!dRepsVoteYes.isEmpty()) {
-                    dRepYesStake = dRepDistStorage.getAllByEpochAndDRepIds(prevEpoch, dRepsVoteYes)
+                    dRepYesStake = dRepDistStorage.getAllByEpochAndDRepIdsExcludeInactiveDReps(currentEpoch, dRepsVoteYes)
                             .stream()
                             .map(DRepDist::getAmount)
                             .reduce(BigInteger.ZERO, BigInteger::add);
@@ -534,7 +521,7 @@ public class ProposalStatusProcessor {
 
                 start = System.currentTimeMillis();
                 // The total stake of No Confidence DRep
-                var dRepNoConfidenceStake = dRepDistStorage.getStakeByDRepTypeAndEpoch(DrepType.NO_CONFIDENCE, prevEpoch);
+                var dRepNoConfidenceStake = dRepDistStorage.getStakeByDRepTypeAndEpoch(DrepType.NO_CONFIDENCE, currentEpoch);
                 votingStats.setDrepNoConfidenceStake(dRepNoConfidenceStake.orElse(BigInteger.ZERO));
 
                 if (govActionDetail.getType().equals(GovActionType.NO_CONFIDENCE) && dRepNoConfidenceStake.isPresent()) {
@@ -561,7 +548,7 @@ public class ProposalStatusProcessor {
                         .filter(Objects::nonNull)
                         .toList();
                 if (!dRepsVoteNo.isEmpty()) {
-                    dRepNoStake = dRepDistStorage.getAllByEpochAndDRepIds(prevEpoch, dRepsVoteNo)
+                    dRepNoStake = dRepDistStorage.getAllByEpochAndDRepIdsExcludeInactiveDReps(currentEpoch, dRepsVoteNo)
                             .stream()
                             .map(DRepDist::getAmount)
                             .reduce(BigInteger.ZERO, BigInteger::add);
@@ -569,7 +556,7 @@ public class ProposalStatusProcessor {
                 votingStats.setDrepNoVoteStake(dRepNoStake);
 
                 // The total stake of dReps that voted for this action
-                BigInteger totalStakeDRepDoVote = dRepDistStorage.getAllByEpochAndDRepIds(prevEpoch, votesForThisProposalByDRep.stream()
+                BigInteger totalStakeDRepDoVote = dRepDistStorage.getAllByEpochAndDRepIdsExcludeInactiveDReps(currentEpoch, votesForThisProposalByDRep.stream()
                                 .map(DRepUtil::getDRepId)
                                 .filter(Objects::nonNull)
                                 .toList())
@@ -605,10 +592,7 @@ public class ProposalStatusProcessor {
                                             && votingProcedure.getGovActionTxHash().equals(proposal.getTxHash())
                                             && votingProcedure.getGovActionIndex() == proposal.getIndex()))
                             .toList();
-                    BigInteger totalStakeSPODoNotVote = epochStakeStorage.getAllActiveStakesByEpochAndPools(prevEpoch + 2, poolsDoNotVoteForThisAction)
-                            .stream()
-                            .map(EpochStake::getAmount)
-                            .reduce(BigInteger.ZERO, BigInteger::add);
+                    BigInteger totalStakeSPODoNotVote = getActiveStakesByEpochAndPoolsBatch(prevEpoch + 2, poolsDoNotVoteForThisAction, QUERY_BATCH_SIZE);
                     spoAbstainStake = spoAbstainStake.add(totalStakeSPODoNotVote);
                 }
                 end = System.currentTimeMillis();
@@ -739,32 +723,37 @@ public class ProposalStatusProcessor {
                 .map(proposalMapper::toProposal)
                 .toList();
 
-        List<Proposal> allProposals = Stream.concat(expiredProposals.stream(), Stream.concat(ratifiedProposals.stream(), activeProposals.stream())).toList();
-        Map<GovActionId, Proposal> siblingsOrDescendantsBeDroppedInCurrentEpoch = new HashMap<>();
+        List<Proposal> newProposals = newProposalsCreatedInPrevEpoch.stream()
+                .map(proposalMapper::toProposal)
+                .toList();
+
+        List<Proposal> allProposals = Stream.concat(expiredProposals.stream(),
+                Stream.concat(ratifiedProposals.stream(),
+                Stream.concat(activeProposals.stream(), newProposals.stream()))).toList();
+        Map<GovActionId, Proposal> proposalsBeDroppedInCurrentEpoch = new HashMap<>();
 
         for (Proposal proposal : expiredProposals) {
             List<Proposal> proposalsToPrune = ProposalUtils.findDescendants(proposal, allProposals);
-            proposalsToPrune.forEach(p -> siblingsOrDescendantsBeDroppedInCurrentEpoch.put(p.getGovActionId(), p));
+            proposalsToPrune.forEach(p -> proposalsBeDroppedInCurrentEpoch.put(p.getGovActionId(), p));
         }
 
         for (Proposal proposal : ratifiedProposals) {
-            // TODO: just a workaround, need to check ledger rule carefully.
-            if (!GovernanceActionUtil.isDelayingAction(proposal.getType())) {
-                List<Proposal> proposalsToPrune = ProposalUtils.findDescendantsAndSiblings(proposal, allProposals);
-                proposalsToPrune.forEach(p -> siblingsOrDescendantsBeDroppedInCurrentEpoch.put(p.getGovActionId(), p));
-            }
+            // For ratified proposals, only drop siblings and descendants of siblings,
+            // NOT descendants of the ratified proposal itself
+            List<Proposal> proposalsToPrune = ProposalUtils.findSiblingsAndTheirDescendants(proposal, allProposals);
+            proposalsToPrune.forEach(p -> proposalsBeDroppedInCurrentEpoch.put(p.getGovActionId(), p));
         }
 
-        List<GovActionProposal> filteredActiveProposals = activeProposalsInPrevSnapshot.stream()
-                .filter(govActionProposal -> !siblingsOrDescendantsBeDroppedInCurrentEpoch.containsKey(
+        List<GovActionProposal> filteredActiveProposals =
+                Stream.concat(activeProposalsInPrevSnapshot.stream(), newProposalsCreatedInPrevEpoch.stream())
+                .filter(govActionProposal -> !proposalsBeDroppedInCurrentEpoch.containsKey(
                         GovActionId.builder()
                                 .gov_action_index(govActionProposal.getIndex())
                                 .transactionId(govActionProposal.getTxHash())
                                 .build()))
                 .toList();
 
-        return Stream.concat(filteredActiveProposals.stream(), newProposalsCreatedInPrevEpoch.stream())
-                .toList();
+        return filteredActiveProposals;
     }
 
     private boolean isEpochInConwayBootstrapPhase(int epoch) {
@@ -810,5 +799,17 @@ public class ProposalStatusProcessor {
         return storeProperties.getProtocolMagic() == Networks.mainnet().getProtocolMagic()
                 || storeProperties.getProtocolMagic() == Networks.preprod().getProtocolMagic()
                 || storeProperties.getProtocolMagic() == Networks.preview().getProtocolMagic();
+    }
+
+    private BigInteger getActiveStakesByEpochAndPoolsBatch(int epoch, List<String> poolIds, int batchSize) {
+        if (poolIds.isEmpty()) {
+            return BigInteger.ZERO;
+        }
+        
+        return ListUtil.partition(poolIds, batchSize)
+                .parallelStream()
+                .flatMap(batch -> epochStakeStorage.getAllActiveStakesByEpochAndPools(epoch, batch).stream())
+                .map(EpochStake::getAmount)
+                .reduce(BigInteger.ZERO, BigInteger::add);
     }
 }
